<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Oxygen Settings</string>

    <!-- Color picker -->
    <string name="title_color_picker">Pick a colour</string>
    <string name="msg_color_picker">Tap on center colour to confirm.\nPress back to cancel.</string>

    <!-- Status bar power widget -->
    <string name="title_expanded_widget">Status bar power widget</string>
    <string name="summary_expanded_widget">Use the status bar power widget</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the status bar pulldown after toggling a widget button</string>
    <string name="expanded_color_mask">Indicator colour</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">Pick your widget buttons</string>
    <string name="title_widget_order">Widget button order</string>
    <string name="summary_widget_order">Order your widget buttons</string>
    <string name="title_buttons">Buttons</string>
    <string name="title_toggle_wifi">Toggle Wifi</string>
    <string name="title_toggle_bluetooth">Toggle Bluetooth</string>
    <string name="title_toggle_gps">Toggle GPS</string>
    <string name="title_toggle_sound">Toggle Sound</string>
    <string name="title_toggle_brightness">Toggle Brightness</string>
    <string name="title_toggle_sync">Toggle Sync</string>
    <string name="title_toggle_wifiap">Toggle Wifi AP</string>
    <string name="title_toggle_screentimeout">Toggle Screentimeout</string>
    <string name="title_toggle_mobiledata">Toggle Mobiledata</string>
    <string name="title_toggle_lockscreen">Toggle Lockscreen</string>
    <string name="title_toggle_networkmode">Toggle 2G/3G</string>
    <string name="title_toggle_autorotate">Toggle Orientation</string>
    <string name="title_toggle_airplane">Toggle Airplane mode</string>
    <string name="title_toggle_flashlight">Toggle LED flashlight</string>
    <string name="title_toggle_sleep">Go to sleep</string>
    <string name="title_toggle_media_play_pause">Media: Toggle Play/Pause</string>
    <string name="title_toggle_media_previous">Media: Skip to Previous</string>
    <string name="title_toggle_media_next">Media: Skip to Next</string>
    <string name="title_button_modes">Button modes</string>
    <string name="pref_brightness_mode_title">Brightness modes</string>
    <string name="pref_brightness_mode_summary">Choose how the brightness button changes modes</string>
    <string name="pref_network_mode_title">Network modes</string>
    <string name="pref_network_mode_summary">Choose how the NetworkMode button changes modes</string>
    <string name="pref_screentimeout_mode_title">Screentimeout modes</string>
    <string name="pref_screentimeout_mode_summary">Choose how the Screentimeout button changes modes</string>
    <string name="pref_ring_mode_title">Sound modes</string>
    <string name="pref_ring_mode_summary">Choose how the sound button changes modes</string>
    <string name="pref_flash_mode_title">Flash mode</string>
    <string name="pref_flash_mode_summary">Choose High / Death Ray</string>
    <string name="widget_max_buttons">6 is the max amount of buttons</string>

    <!-- Extras -->
    <string name="title_extras">Extras</string>
    <string name="title_long_press_kill">Long press back to kill</string>
    <string name="summary_long_press_kill">Long-pressing the back key will kill the foreground application</string>
    <string name="title_pinch_reflow">Reflow after pinch in</string>
    <string name="summary_pinch_reflow">Reflow content immediately after pinch to zoom in</string>
    <string name="title_torch">Torch</string>

    <!-- Battery percentage -->
    <string name="battery_percentage_title">Battery percentage</string>
    <string name="battery_percentage_charge_title">Charging percentage</string>

    <!-- Torch -->
    <string name="torch_app_name">Torch</string> 
    <string name="torch_about">About: </string> 
    <string name="torch_about_btn">About Torch</string> 
    <string name="torch_about_title">About</string> 
    <string name="torch_about_close">Close</string> 
 
    <string name="torch_description">This program manipulates the camera LED.\n</string> 
    <string name="torch_warning">Warning: Leaving the LED on for a long time might overheat it.\n\nFull brightness \'always on\' has been tested running for 1/2 hr, but there is the risk this could damage the LED.\n</string> 
    <string name="torch_license">Original code from Nexus One Torch by Ben Buxton, released under the GPL, v3.\nhttp://n1torch.googlecode.com/\n\nThanks to David Prieto for new UI design.\n\nModified for Oxygen by Adam Green.\n\n</string> 
    <string name="torch_warning_label">Warning</string> 
    <string name="torch_brightwarn">Full brightness has been tested successfully for 1/2 hour of operation, but got quite hot, and started flickering (temporarily) at 45 mins. Long term effects are unknown.\n\nThis is not supported on the widget yet.\n\nClick \'Accept\' if you want to use it at your own risk.</string> 
    <string name="torch_brightwarn_title">Hi-brite \'On\' button!!!</string> 
    <string name="torch_brightwarn_negative">No thanks</string> 
    <string name="torch_brightwarn_accept">Accept</string> 
 
    <string name="torch_label_on">On</string> 
    <string name="torch_label_off">Off</string> 
    <string name="torch_label_high">High brightness</string> 
    <string name="torch_label_strobe">Strobe</string> 
    <string name="torch_label_frequency">Frequency: (slide to change)</string> 
 
    <string name="torch_widget_options">General options</string> 
    <string name="torch_setting_widget_bright">Bright widget</string> 
    <string name="torch_setting_widget_strobe">Strobe flash</string> 
    <string name="torch_setting_frequency_title">Strobe frequency</string> 
    <string name="torch_setting_frequency_summary">Frequency of strobe light</string> 
    <string name="torch_setting_frequency_dialog">Frequency</string> 
    <string name="torch_setting_frequency_hz"> Hz</string> 
    <string name="torch_setting_add_widget">Add widget</string> 
 
    <string name="torch_not_torch_title">Torch on</string> 
    <string name="torch_not_torch_summary">Torch currently on</string> 
 
    <string name="torch_widget_label">Torch</string>
</resources>
