<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">
    <PreferenceCategory android:title="@string/title_extras">
        <PreferenceScreen android:key="battery_percent"
            android:title="@string/battery_percentage_title">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.oxygen.settings"
                android:targetClass="org.oxygen.settings.BatteryPercent" />
        </PreferenceScreen>
        <CheckBoxPreference android:key="long_press_kill"
            android:title="@string/title_long_press_kill"
            android:summary="@string/summary_long_press_kill" />
        <CheckBoxPreference android:key="pinch_reflow"
            android:title="@string/title_pinch_reflow"
            android:summary="@string/summary_pinch_reflow" />
        <PreferenceScreen android:key="status_bar_widget"
            android:title="@string/title_expanded_widget">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.oxygen.settings"
                android:targetClass="org.oxygen.settings.PowerWidget" />
        </PreferenceScreen>
        <PreferenceScreen android:key="torch"
            android:title="@string/title_torch">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.oxygen.settings"
                android:targetClass="org.oxygen.settings.TorchMainActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>
