<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <CheckBoxPreference android:key="battery_percentage"
        android:title="@string/title_battery_percentage" />

    <CheckBoxPreference android:key="long_press_kill"
        android:title="@string/title_long_press_kill"
        android:summary="@string/summary_long_press_kill" />

    <CheckBoxPreference android:key="pinch_reflow"
        android:title="@string/title_pinch_reflow"
        android:summary="@string/summary_pinch_reflow" />

    <PreferenceScreen android:key="torch"
        android:title="@string/title_torch">
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="org.oxygen.settings"
            android:targetClass="net.cactii.flash2.MainActivity" />
    </PreferenceScreen>

</PreferenceScreen>
