<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <PreferenceCategory android:title="@string/title_expanded_widget">
        <CheckBoxPreference android:key="expanded_widget"
            android:title="@string/title_expanded_widget"
            android:summary="@string/summary_expanded_widget"
            android:defaultValue="false" />
        <CheckBoxPreference android:key="expanded_hide_onchange"
            android:title="@string/title_expanded_hide_onchange"
            android:summary="@string/summary_expanded_hide_onchange"
            android:defaultValue="false"
            android:dependency="expanded_widget" />
        <CheckBoxPreference android:key="expanded_hide_scrollbar"
            android:title="@string/title_expanded_hide_scrollbar"
            android:summary="@string/summary_expanded_hide_scrollbar"
            android:defaultValue="true"
            android:dependency="expanded_widget" />
        <Preference
            android:key="expanded_color_mask"
            android:title="@string/expanded_color_mask"
            android:summary="@string/expanded_color_mask"
            android:defaultValue="-1"
            android:dependency="expanded_widget" />
        <PreferenceScreen android:key="widget_picker"
            android:title="@string/title_widget_picker"
            android:summary="@string/summary_widget_picker"
            android:dependency="expanded_widget">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.oxygen.settings"
                android:targetClass="org.oxygen.settings.PowerWidgetActivity" />
        </PreferenceScreen>
        <PreferenceScreen android:key="widget_order"
            android:title="@string/title_widget_order"
            android:summary="@string/summary_widget_order"
            android:dependency="expanded_widget">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="org.oxygen.settings"
                android:targetClass="org.oxygen.settings.PowerWidgetOrderActivity" />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
